managedscheduledapex-app/objects/ScheduledApex__c/ScheduledApex__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of tasks and respective times to run in the DailyScheduler</description>
    <label>ScheduledApex</label>
</CustomObject>