managedscheduledapex-app/objects/ScheduledApex__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <defaultValue>&apos;-&apos;</defaultValue>
    <description>What time of day to run this task.</description>
    <inlineHelpText>What time of day to run this task.  Allowed values are a number 0 through 23, a range like 6-12, comma separated values or ranges, or * which is equivalent to 0-23.  Lastly a - may be used to indicate the job should not run.</inlineHelpText>
    <label>Hour</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>