managedscheduledapex-app/objects/ScheduledApex__c/fields/JSON_Constructor_2__c.field-meta.xml
<CustomField>
    <fullName>JSON_Constructor_2__c</fullName>
    <description>Overflow for JSON contructors greater than 256 characters.</description>
    <inlineHelpText>Overflow for JSON contructors greater than 256 characters.</inlineHelpText>
    <label>JSON Constructor 2</label>
    <type>TextArea</type>
</CustomField>