managedscheduledapex-app/objects/ScheduledApex__c/fields/JSON_Constructor__c.field-meta.xml
<CustomField>
    <fullName>JSON_Constructor__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <description>Populate to define how to construct the object, from the specified class. Default is {}.</description>
    <inlineHelpText>Populate to define how to construct the object, from the specified class. Default is {}.</inlineHelpText>
    <label>JSON Constructor</label>
    <type>TextArea</type>
</CustomField>