managedscheduledapex-app/objects/ScheduledApex__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <description>The minute ranges in which the job should invoke.</description>
    <inlineHelpText>Set to a range of minutes like 0,6,30-45</inlineHelpText>
    <label>Minute</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>