managedscheduledapex-app/objects/ScheduledApex__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <label>NamespacePrefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>