managedscheduledapex-app/objects/ScheduledApex__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <defaultValue>$User.Id</defaultValue>
    <description>The user Id of the person who will own the task.</description>
    <inlineHelpText>The user Id of the person who will own the task.</inlineHelpText>
    <label>Task OwnerId</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>