managedscheduledapex-app/objects/ScheduledApex__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>9999</defaultValue>
    <description>This is a sorting value order.  The lowest value will be queued first.</description>
    <inlineHelpText>This is a sorting value order.  The lowest value will be queued first.</inlineHelpText>
    <label>Priority</label>
    <precision>6</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>