managedscheduledapex-app/objects/ScheduledApex__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <defaultValue>200</defaultValue>
    <description>How many records are processed per batch?</description>
    <inlineHelpText>How many records are processed per batch?  (2000 maximum)</inlineHelpText>
    <label>Scope</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>