managedscheduledapex-app/objects/ScheduledApex__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Hour__c</columns>
    <columns>Minute__c</columns>
    <columns>MustRun__c</columns>
    <columns>Scope__c</columns>
    <columns>OwnerId__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NamespacePrefix__c</columns>
    <columns>ClassName__c</columns>
    <columns>JSON_Constructor__c</columns>
    <columns>JSON_Constructor_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>